--- a/assets/scss/components/_table.scss
+++ b/assets/scss/components/_table.scss
@@ -156,5 +156,4 @@ table.tabled {
 
 div.table-wrapper {
   border-right: 1px solid $gray-5;
-  -webkit-overflow-scrolling: touch;
 }
